--- a/app/views/billing_projects/index.html.erb
+++ b/app/views/billing_projects/index.html.erb
@@ -46,45 +46,16 @@
     </table>
   </div>
 </div>
-<p><%= scp_link_to "<i class='fas fa-fw fa-plus'></i> New Billing Project".html_safe, '#', class: 'btn btn-lg btn-success', id: 'add-billing-project' %></p>
-
-<div class="modal fade" id="new-firecloud-project-modal" role="dialog" aria-labelledby="new-firecloud-project-modal" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="bs-callout bs-callout-info">
-          <h4 class="text-center">Create a new Terra Billing Project</h4>
-          <p class="help-block">Use this form to create a new Terra billing project.  In order to create a new project, you will need to have already
-            created a Google billing account to bill against, and granted Terra access to that account.</p>
-          <p class="text-center"><%= link_to 'Instructions on creating Google billing accounts',
-                                             'https://support.terra.bio/hc/en-us/articles/360026182251#How%20to%20create%20your%20own%20Google%20Billing%20Account',
-                                             target: :_blank, class: 'btn btn-default' %></p>
-        </div>
-        <%= form_for(:billing_project, url: create_billing_project_path, html: {class: 'form', id: 'new-billing-project'}) do |f| %>
-          <%= hidden_field_tag :scpbr, params[:scpbr] %>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <%= f.label :project_name %><br />
-              <%= f.text_field :project_name, class: 'form-control' %>
-            </div>
-            <div class="col-sm-6">
-              <%= f.label :billing_account %><br />
-              <%= f.select :billing_account, options_for_select(@accounts), {include_blank: 'Please select an available account...'}, class: 'form-control' %>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12 text-center">
-              <%= f.submit 'Create Billing Project', class: 'btn btn-success btn-lg', id: 'create-billing-project', data: {'saving-text' => 'Creating project... Please wait'} %>
-            </div>
-          </div>
-        <% end %>
-      </div>
-      <div class="modal-footer">
-        <button class="close" data-dismiss="modal">×</button>
-      </div>
-    </div>
-  </div>
-</div>
+<p>
+  <%= scp_link_to "New Billing Project", '#', class: 'btn btn-lg btn-default', disabled: true,
+                   data: {
+                     content: 'Please visit <a href="https://app.terra.bio/#billing" target="_blank">Terra</a> ' + \
+                              'to create a new billing project.',
+                     toggle: 'popover',
+                     placement: 'right',
+                     html: true,
+                   } %>
+</p>
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
     var projectsTable = $('#firecloud-billing').DataTable({
@@ -95,38 +66,11 @@
         }
     });
 
-    $('#add-billing-project').click(function () {
-        $('#billing_project_project_name').val('');
-        $('#billing_project_billing_account').val('');
-        $('#new-billing-project .form-control').each(function() {
-            $(this).parent().removeClass('has-error has-feedback');
-        });
-        $('#new-firecloud-project-modal').modal('show');
-    });
-
     $('#firecloud-billing').on('click', '.storage-estimate', function() {
         $('#generic-modal-title').html("Calculating Total Cost... Please Wait<br /><small>This may take a while...</small>");
         launchModalSpinner('#generic-modal-spinner', '#generic-modal', function() {
             return true;
         });
-    });
-
-    $('#create-billing-project').click(function () {
-        var projectName = $('#billing_project_project_name').val();
-        var billingAccount = $('#billing_project_billing_account').val();
-        if (projectName === '' || billingAccount === '') {
-            alert('You must provide name and select a billing account before saving.');
-            setErrorOnBlank($('#new-billing-project .form-control'));
-            return false;
-        } else if (projectName.split(' ').length > 1) {
-            alert('Only alphanumeric characters are allowed for the project name (no spaces)');
-            $('#billing_project_project_name').parent().addClass('has-error has-feedback');
-            return false;
-        } else {
-            $(this).addClass('disabled');
-            $(this).toggleClass('btn-success btn-warning');
-            return true;
-        }
     });
 
     $('body').on('click', '.delete-billing-project-user', function(event) {
