--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -126,3 +126,16 @@
 		list-style: none;
 	}
 }
+
+.saving-overlay {
+	position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, .5);
+  text-align: center;
+  padding-top: 3em;
+  font-size: 1.5em;
+  color: #888;
+}
