--- a/app/views/studies/_initialize_ordinations_form.html.erb
+++ b/app/views/studies/_initialize_ordinations_form.html.erb
@@ -154,13 +154,35 @@
 				maxChunkSize: 10000000,
 				type: 'PATCH',
 				acceptFileTypes: ALLOWED_FILE_TYPES['plainText'],
-				add: function (e, data) {
-					  fileUploading = true;
-					  var that = this;
-					  var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
+				add: async function (e, data) {
+          fileUploading = true;
+          var that = this;
+
+          const file = data.files[0]
+          const fileType = 'cluster'
+          const containerId = `${ordsFormSelector.slice(1)}-container`
+
+          let validationErrors = []
+          let summary = ''
+          <% if User.feature_flag_for_instance(current_user, 'clientside_validation') %>
+            $(`#${containerId}`).remove() // Remove any prior notice
+            $(ordsFormSelector).append(`<div id="${containerId}"></div>`)
+            // Run client-side metadata file validation
+            const results = await window.SCP.validateFile(file, fileType)
+            validationErrors = results.errors
+            summary = results.summary
+          <% end %>
+
+
+          if (validationErrors.length === 0) {
+            var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
             $(`${ordsFormSelector} .filename-to-upload`).val(fileName);
-            canUpload = validateCandidateUpload(ordsFormSelector, fileName, $('.initialize_ordinations_form .filename-to-upload'));
-            if ( canUpload ) {
+            canUpload = validateCandidateUpload(
+              ordsFormSelector, fileName,
+              $('.initialize_ordinations_form .filename-to-upload')
+            );
+
+            if ( validationErrors.length ) {
                 $.getJSON("<%= resume_upload_study_path %>", {file: fileName}, function (result) {
                     var file = result.file;
                     if (file == null) {
@@ -174,6 +196,12 @@
             } else {
                 $(`${ordsFormSelector} .filename-to-upload`).val('');
             }
+          } else {
+            const target = document.querySelector(`#${containerId}`)
+            window.SCP.renderValidationAlert(
+              target, summary, validationErrors, fileType,
+            )
+          }
 				},
 				chunkdone: function(e, data) {
 					var perc = parseInt(data.loaded / data.total * 100, 10);
