Ensure cluster validation error message is red, not blue

--- a/app/javascript/styles/_colors.scss
+++ b/app/javascript/styles/_colors.scss
@@ -6,3 +6,5 @@ $action-color: #4d72aa;
 /* non-fatal errors -- color palette borrowed from Terra */
 $warning-background-color: #feeed8;
 $warning-icon-color: #f6901b;
+
+$danger-color: #a94442
