--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -504,6 +504,11 @@ h6,
   font-size: 14px;
 }
 
+/* Slightly override container settings, e.g. for cluster validation errors */
+.alert.alert-danger ul {
+  color: $danger-color;
+}
+
 .message-text {
 	text-align: center;
 	padding: 3em;
