--- a/app/views/studies/_initialize_ordinations_form.html.erb
+++ b/app/views/studies/_initialize_ordinations_form.html.erb
@@ -182,7 +182,7 @@
               $('.initialize_ordinations_form .filename-to-upload')
             );
 
-            if ( validationErrors.length ) {
+            if ( canUpload ) {
                 $.getJSON("<%= resume_upload_study_path %>", {file: fileName}, function (result) {
                     var file = result.file;
                     if (file == null) {
