adding rel: 'noopener noreferrer' to all new window open links

--- a/app/views/admin_configurations/_firecloud_api_status.html.erb
+++ b/app/views/admin_configurations/_firecloud_api_status.html.erb
@@ -26,7 +26,8 @@
           <% end %>
         </tbody>
       </table>
-      <p class="text-center"><%= link_to 'Status Console', 'http://status.firecloud.org', class: 'btn btn-sm btn-primary', target: :_blank %></p>
+      <p class="text-center"><%= link_to 'Status Console', 'http://status.firecloud.org', class: 'btn btn-sm btn-primary',
+                                         target: :_blank, rel: 'noopener noreferrer' %></p>
     </div>
   </div>
 </div>
