--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -82,12 +82,12 @@
               <h4>Please complete your Terra registration</h4>
               <p>
                 You may not update your Terra profile until you have registered with Terra and accepted the terms of service.
-                Please <%= link_to 'visit Terra', 'https://app.terra.bio', target: :_blank %>, select 'Sign in with Google'
-                from the top-lefthand nav menu, and complete the sign in and registration process.
+                Please <%= link_to 'visit Terra', 'https://app.terra.bio', target: :_blank, rel: 'noopener noreferrer' %>,
+                select 'Sign in with Google' from the top-lefthand nav menu, and complete the sign in and registration process.
               </p>
               <p class="text-center">
                 <%= link_to "Complete Registration Now <i class='fas fa-external-link-alt'></i>".html_safe, 'https://app.terra.bio',
-                            target: :_blank, class: 'btn btn-lg btn-default' %>
+                            target: :_blank, rel: 'noopener noreferrer', class: 'btn btn-lg btn-default' %>
               </p>
             </div>
           </div>
