--- a/app/views/site/get_workspace_submissions.js.erb
+++ b/app/views/site/get_workspace_submissions.js.erb
@@ -7,7 +7,7 @@ var rows = []
       'DT_RowId': "submission-<%= submission['submissionId'] %>",
       'submission_date' : "<%= escape_javascript(local_timestamp(submission['submissionDate'])) %>",
       'submission_email': "<%= escape_javascript(submission['submitter']) %>",
-      'submission_id': "<%= escape_javascript(link_to submission['submissionId'], @study.submission_url(submission['submissionId']), class: 'submission-bucket-link', target: :_blank, data: {toggle: 'tooltip'}, title: 'View submission directory') %>",
+      'submission_id': "<%= escape_javascript(link_to submission['submissionId'], @study.submission_url(submission['submissionId']), class: 'submission-bucket-link', target: :_blank, rel: 'noopener noreferrer', data: {toggle: 'tooltip'}, title: 'View submission directory') %>",
       'submission_workflow': "<%= escape_javascript(submission['methodConfigurationName']) %>",
       'submission_sample': "<%= escape_javascript(submission['submissionEntity'].present? ? submission['submissionEntity']['entityName'] : 'N/A') %>",
       'submission_state': "<%= escape_javascript(submission_status_label(submission['status'])) %>",
