--- a/app/views/studies/_block_processed_upload_content.html.erb
+++ b/app/views/studies/_block_processed_upload_content.html.erb
@@ -22,7 +22,7 @@
             <p><%= link_to "Request Exemption <i class='fas fa-external-link-alt'></i>".html_safe,
                            'https://singlecell.zendesk.com/hc/en-us/requests/new?ticket_form_id=1260811597230',
                            class: 'btn btn-default btn-lg', 'data-analytics-name' => 'raw-counts-exemption',
-                           target: '_blank' %>
+                           target: '_blank', rel: 'noopener noreferrer' %>
           </div>
         </div>
       </div>
