--- a/app/views/branding_groups/list_navigate.html.erb
+++ b/app/views/branding_groups/list_navigate.html.erb
@@ -16,7 +16,8 @@
             <%= branding_group.studies.count %> studies
             <% if branding_group.external_link_url.present? %>
               <br/>
-              <%= link_to branding_group.external_link_description.html_safe + " <span class='fas fa-fw fa-external-link-alt'></span> ".html_safe , branding_group.external_link_url, target: '_blank'%>
+              <%= link_to branding_group.external_link_description.html_safe + " <span class='fas fa-fw fa-external-link-alt'></span> ".html_safe,
+                          branding_group.external_link_url, target: '_blank', rel: 'noopener noreferrer' %>
             <% end %>
           </div>
           <div class="collections-actions">
