--- a/app/views/layouts/_contact_us.html.erb
+++ b/app/views/layouts/_contact_us.html.erb
@@ -1,4 +1,5 @@
 <p class="scp-help-text">If you are experiencing issues using Single Cell Portal or would like to ask a question,
     please send an email to <%= mail_to 'scp-support@broadinstitute.zendesk.com', 'scp-support@broadinstitute.zendesk.com' %>.</p>
-<p class="scp-help-text">You can also visit our <%= link_to 'documentation', 'https://singlecell.zendesk.com/hc/en-us', target: :_blank %>
+<p class="scp-help-text">You can also visit our <%= link_to 'documentation', 'https://singlecell.zendesk.com/hc/en-us',
+                                                            target: :_blank, rel: 'noopener noreferrer' %>
     to view common topics about using Single Cell Portal.</p>
