--- a/app/views/layouts/_download_link.html.erb
+++ b/app/views/layouts/_download_link.html.erb
@@ -2,14 +2,21 @@
     <span class="label label-warning embargoed-file"><i class="fas fa-ban"></i> Data Release Date: <%= @study.embargo.to_s(:long) %></span>
 <% else %>
   <% if study_file.upload_file_name.nil? && study_file.human_data %>
-      <%= link_to "<span class='fas fa-cloud-download'></span> External".html_safe, study_file.download_path, class: 'btn btn-primary', target: :_blank, data: {"analytics-name": 'file-download:study-single:external'} %>
+      <%= link_to "<span class='fas fa-cloud-download'></span> External".html_safe, study_file.download_path, class: 'btn btn-primary',
+                  target: :_blank, rel: 'noopener noreferrer', data: {"analytics-name": 'file-download:study-single:external'} %>
   <% else %>
       <% if study_file.generation and current_user.daily_download_quota + study_file.upload_file_size <= @download_quota %>
-          <%= link_to "<span class='fas fa-download'></span> #{number_to_human_size(study_file.upload_file_size, prefix: :si)}".html_safe, study_file.download_path, class: "btn btn-primary dl-link #{study_file.file_type_class}", data: {filename: study_file.upload_file_name, "analytics-name": 'file-download:study-single'} %>
+          <%= link_to "<span class='fas fa-download'></span> #{number_to_human_size(study_file.upload_file_size, prefix: :si)}".html_safe,
+                      study_file.download_path, class: "btn btn-primary dl-link #{study_file.file_type_class}",
+                      data: {filename: study_file.upload_file_name, "analytics-name": 'file-download:study-single'} %>
       <% elsif !study_file.generation %>
-            <span class="label label-warning no-download-available" title="You will be able to download this file once it has been uploaded to our remote data store.  Check back soon.", data-toggle="tooltip"><i class="fas fa-ban"></i> Awaiting remote file</span>
+            <span class="label label-warning no-download-available"
+                  title="You will be able to download this file once it has been uploaded to our remote data store.  Check back soon."
+                  data-toggle="tooltip"><i class="fas fa-ban"></i> Awaiting remote file</span>
       <% else %>
-          <span class="btn btn-sm btn-danger disabled-download" title="This file exceeds your daily download quota of <%= number_to_human_size(@download_quota) %>.  Please wait until tomorrow.", data-toggle="tooltip"><i class="fas fa-times"></i> Exceeds Quota</span>
+          <span class="btn btn-sm btn-danger disabled-download"
+                title="This file exceeds your daily download quota of <%= number_to_human_size(@download_quota) %>.  Please wait until tomorrow."
+                data-toggle="tooltip"><i class="fas fa-times"></i> Exceeds Quota</span>
       <% end %>
   <% end %>
 <% end %>
