--- a/app/views/layouts/_external_resources_view.html.erb
+++ b/app/views/layouts/_external_resources_view.html.erb
@@ -2,7 +2,8 @@
   <% instance.external_resources.each do |resource| %>
     <%= link_to "#{resource.title}#{resource.publication_url ? " <i class='far fa-file-alt'></i>" : nil}".html_safe,
                 resource.url, class: 'btn btn-default navigation-form external-resource-link', target: :_blank,
-                title: "#{resource.publication_url ? 'Publication: ': nil }#{resource.description}", data: {toggle: 'tooltip'} %>
+                rel: 'noopener noreferrer', title: "#{resource.publication_url ? 'Publication: ': nil }#{resource.description}",
+                data: {toggle: 'tooltip'} %>
   <% end %>
 </p>
 
