--- a/app/views/branding_groups/_form.html.erb
+++ b/app/views/branding_groups/_form.html.erb
@@ -88,6 +88,6 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit 'Update Collection', class: 'btn btn-lg btn-success', id: 'save-branding-group' %>
+    <%= f.submit nil, class: 'btn btn-lg btn-success', id: 'save-branding-group' %>
   </div>
 <% end %>
