--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -75,7 +75,7 @@
                                 class: 'check-upload' %></li>
             <% if current_user.available_branding_groups.any? %>
               <li role="separator" class="divider"></li>
-              <li class="dropdown-header">My Collections</li>
+              <li class="dropdown-header">My Brands</li>
               <% current_user.available_branding_groups.each do |branding_group| %>
                 <li id="<%= branding_group.name_as_id %>-nav"><%= link_to "<i class='fas fa-copyright fa-fw'></i> #{branding_group.name}".html_safe,
                                                                           site_path(scpbr: branding_group.name_as_id) %></li>
