--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -122,6 +122,7 @@
     width: 100%;
     padding: 0.5em;
     border-bottom: 1px solid #666;
+    overflow-x: hidden;
   }
   ul {
     list-style: none;
