--- a/app/views/studies/_block_processed_upload_content.html.erb
+++ b/app/views/studies/_block_processed_upload_content.html.erb
@@ -20,7 +20,9 @@
           </div>
           <div class="col-md-3">
             <p><%= link_to "Request Exemption <i class='fas fa-external-link-alt'></i>".html_safe,
-                           'https://singlecell.zendesk.com/hc/en-us/requests/new?ticket_form_id=1260811597230',
+                           'https://singlecell.zendesk.com/hc/en-us/requests/new?ticket_form_id=1260811597230' \
+                           "&tf_1260822624790=#{@study.accession}&tf_anonymous_requester_email=#{current_user.email}" \
+                           "&tf_1900002173444=raw_count_exemption",
                            class: 'btn btn-default btn-lg', 'data-analytics-name' => 'raw-counts-exemption',
                            target: '_blank', rel: 'noopener noreferrer' %>
           </div>
