--- a/app/views/branding_groups/list_navigate.html.erb
+++ b/app/views/branding_groups/list_navigate.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center">Collections</h2>
+<h2><%= link_to 'Home', site_path %> / Collections</h2>
 <span>Collections are curated groups of studies which share a common research theme. If your organization is interested in creating a collection within SCP, contact us at <%= mail_to 'scp-support@broadinstitute.zendesk.com', 'scp-support@broadinstitute.zendesk.com' %></span>
 <div class="row">
   <div class="col-md-12">
