--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,11 +4,9 @@
     <div class="col-md-12">
 
       <% if @selected_branding_group.nil? %>
-        <div class="home-nav" id="collections-tab"
-            style="float:right;">
-          <a href="/single_cell/collections" class="btn btn-primary"
-             style="display: inline-block; font-size:16px;">
-            Browse Collections <span class="fas fa-bacteria"></span><span class="fas-fa-bacteria"></span>
+        <div class="home-nav" id="collections-tab">
+          <a href="/single_cell/collections" class="btn btn-primary">
+            Browse Collections
           </a>
         </div>
       <% end %>
