--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -38,6 +38,9 @@
                 <%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe,
                             '#/', class: 'btn btn-default get-download-command', id: 'get-download-command__all' %></p>
               <% if @directories.any? %>
+                <p class="lead command-container" id="command-container-nodirs">
+                  <%= link_to "<i class='fas fa-download'></i> Get download command for study files only (no folders)".html_safe,
+                              '#/', class: 'btn btn-default get-download-command', id: 'get-download-command__nodirs' %></p>
                 <p class="lead">To download all data files in a specific folder, use the following commands:</p>
                 <table class="table table-condensed table-striped">
                   <thead>
@@ -58,6 +61,7 @@
                   </thead>
                 </table>
               <% end %>
+
             <% else %>
               <%# The user is trying to download a public study that is currently embargoed. %>
               <p class="lead">No downloads are available to you for this study yet</p>
